fix block title margin bag

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
             <div class="features__block-img">
               <img src="./img/main_help_block_icon.png" alt="icon" />
             </div>
-            <h3 class="block-title">Grow your business</h3>
+            <h3 class="features__block-title block-title">
+              Grow your business
+            </h3>
             <h5 class="features__block-description block-description">
               The magic wand for success is in figuring out how to bring in the
               profits and ensure the capacity needed to sustain that growth for
@@ -85,7 +87,9 @@
             <div class="features__block-img">
               <img src="./img/main_help_block_icon.png" alt="icon" />
             </div>
-            <h3 class="block-title">Grow your business</h3>
+            <h3 class="features__block-title block-title">
+              Grow your business
+            </h3>
             <h5 class="features__block-description block-description">
               The magic wand for success is in figuring out how to bring in the
               profits and ensure the capacity needed to sustain that growth for
@@ -96,7 +100,9 @@
             <div class="features__block-img">
               <img src="./img/main_help_block_icon.png" alt="icon" />
             </div>
-            <h3 class="block-title">Grow your business</h3>
+            <h3 class="features__block-title block-title">
+              Grow your business
+            </h3>
             <h5 class="features__block-description block-description">
               The magic wand for success is in figuring out how to bring in the
               profits and ensure the capacity needed to sustain that growth for
@@ -107,7 +113,9 @@
             <div class="features__block-img">
               <img src="./img/main_help_block_icon.png" alt="icon" />
             </div>
-            <h3 class="block-title">Grow your business</h3>
+            <h3 class="features__block-title block-title">
+              Grow your business
+            </h3>
             <h5 class="features__block-description block-description">
               The magic wand for success is in figuring out how to bring in the
               profits and ensure the capacity needed to sustain that growth for
@@ -118,7 +126,9 @@
             <div class="features__block-img">
               <img src="./img/main_help_block_icon.png" alt="icon" />
             </div>
-            <h3 class="block-title">Grow your business</h3>
+            <h3 class="features__block-title block-title">
+              Grow your business
+            </h3>
             <h5 class="features__block-description block-description">
               The magic wand for success is in figuring out how to bring in the
               profits and ensure the capacity needed to sustain that growth for
@@ -129,7 +139,9 @@
             <div class="features__block-img">
               <img src="./img/main_help_block_icon.png" alt="icon" />
             </div>
-            <h3 class="block-title">Grow your business</h3>
+            <h3 class="features__block-title block-title">
+              Grow your business
+            </h3>
             <h5 class="features__block-description block-description">
               The magic wand for success is in figuring out how to bring in the
               profits and ensure the capacity needed to sustain that growth for
@@ -161,7 +173,7 @@
               <div class="process__block-info-img">
                 <img src="./img/main_process_info_icon.png" alt="icon" />
               </div>
-              <h3 class="block-title">Business Audit</h3>
+              <h3 class="process__block-title block-title">Business Audit</h3>
               <h5 class="process__block-info-description block-description">
                 An audit examines your business's financial records to verify
                 they are accurate. This is done through a systematic review of
@@ -182,7 +194,7 @@
               <div class="process__block-info-img">
                 <img src="./img/main_process_info_icon.png" alt="icon" />
               </div>
-              <h3 class="block-title">Business Audit</h3>
+              <h3 class="process__block-title block-title">Business Audit</h3>
               <h5 class="process__block-info-description block-description">
                 An audit examines your business's financial records to verify
                 they are accurate. This is done through a systematic review of
@@ -203,7 +215,7 @@
               <div class="process__block-info-img">
                 <img src="./img/main_process_info_icon.png" alt="icon" />
               </div>
-              <h3 class="block-title">Business Audit</h3>
+              <h3 class="process__block-title block-title">Business Audit</h3>
               <h5 class="process__block-info-description block-description">
                 An audit examines your business's financial records to verify
                 they are accurate. This is done through a systematic review of
